--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,9 @@
   
     <form >
 <div class="teste">
-
+<h2>Formulario</h2>
+<hr>
+<br>
     <label for="name">Nome:</label>
   <input type="text" id="name" name="name">
 <br>
