--- a/index7.html
+++ b/index7.html
@@ -16,7 +16,7 @@
         <input type"date" id="Data">
         <small>Ex: 2000-01-01</small>
         <label for="horario">Melhor horario para contato:</label>
-        <input type="time">
+        <input type="time" id="horario">
         <button>Enviar</button>
     </form>
 
